fixed bug with spacing after list elements

--- a/assets/src/scss/_main.scss
+++ b/assets/src/scss/_main.scss
@@ -39,6 +39,10 @@ a {
     }
 }
 
+ul {
+    margin: 0px;
+}
+
 #me-image {
     text-align: center;
     vertical-align: middle;
